--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@openzeppelin/contracts": "^5.0.2",
         "react-typing-effect": "^2.0.5"
     }
 }
