--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     },
     "dependencies": {
         "@openzeppelin/contracts": "^5.0.2",
-        "react-typing-effect": "^2.0.5"
+        "chart.js": "^4.4.3",
+        "react-chartjs-2": "^5.2.0",
+        "react-google-charts": "^4.0.1",
+        "react-typing-effect": "^2.0.5",
+        "recharts": "^2.12.7"
     }
 }
